# PrevEve

./: CMakeLists.txt  PrevEve  README.md  eve-w-preview  resources.qrc
.github/workflows/: cmake-multi-platform.yml
scripts/: KWin_GetThumbnailsPositions.js  KWin_KeepAbove.js  KWin_PingTest.js  KWin_SetFocusedWindow.js  KWin_SetPosition.js  KWin_SetWindowPosition.js  KWin_TrackThumbnailsGeometry.js  eve-w-preview.desktop
src/: CharactersListPopUp.cpp  CharactersListPopUp.h  ConfigManager.cpp  ConfigManager.h  EveWPreviewWindow.cpp  EveWPreviewWindow.h  EveWPreviewWindow.ui  KWinManager.cpp  KWinManager.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  PipeWirePreview.cpp  PipeWirePreview.h  PortalStreamInfo.h  ScreenCastHandler.cpp  ScreenCastHandler.h  StreamInfo.h  StreamManager.cpp  StreamManager.h  Thumbnail.cpp  Thumbnail.h  Thumbnail.ui  main.cpp
src/Data/: PortalStreamInfo.h  ThumbnailPosition.h
